--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.8.1",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.12.0",
     "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
